--- a/SeniorSimulator/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/SeniorSimulator/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -191,7 +191,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":0.969482421875,\"y\":0.8371312618255615,\"z\":-0.98455810546875}}"
+                "value": "{\"m_Value\":{\"x\":21.0,\"y\":10.0,\"z\":-2.0}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
